# Flight-Dynamics-Simulator

./: .gitignore  CMakeLists.txt  flight_log_20250929_233139.csv  flight_log_20250929_233400.csv  flight_log_20250929_234021.csv  flight_log_20250929_234113.csv  flight_log_20250929_234330.csv  readme.md
include/: control_panel.h  horizon_widget.h  math.hpp  physics.hpp  ring.hpp  utils.hpp
scripts/: buildMac.sh  buildMacTests.sh
src/: control_panel.cpp  horizon_widget.cpp  main_qt.cpp  physics.cpp
test/: test_physics.cpp
